--- a/_posts/2020-03-23-python-38.md
+++ b/_posts/2020-03-23-python-38.md
@@ -7,6 +7,8 @@ category:
  - python
 ---
 
+Если вы, как и я, всё откладывали просмотр, что нового в Python 3.8, эта лекция для вас :)
+
 Запись лекции:
 
 * https://youtu.be/oeWN-vLYFew
