--- a/_posts/2020-03-23-python-38.md
+++ b/_posts/2020-03-23-python-38.md
@@ -11,8 +11,8 @@ category:
 
 Запись лекции:
 
-* [Часть 1](https://youtu.be/oeWN-vLYFew]
-* [Часть 2](https://youtu.be/gGZF7Srrals]
+* [Часть 1](https://youtu.be/oeWN-vLYFew)
+* [Часть 2](https://youtu.be/gGZF7Srrals)
 
 Ссылки:
 
