--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -14,6 +14,12 @@ category:
 
 ## PyNEng
 
+### PyNEng-9
+
+* Перечитать и обновить задания
+* Добавить задание explore network map в 19 раздел (19.4)
+* Добавить задание textfsm states
+
 ### PyNEng-8
 
 * ~~Перечитать и обновить задания~~
@@ -31,13 +37,15 @@ category:
 * Обновить раздел по Ansible до последней версии.
 * Добавить информацию по [SQLite foreign key](https://pyneng.github.io/pyneng-3/db-foreign-key/) в 18 раздел
 * Написать вводное по поводу разделов 1 и 2
+* Написать про цепочку методов
 
 ### Бонусные лекции PyNEng
 
-* What's new in Python 3.8
-* tmux
-* click
-* PEP8 part 2, black
+* ~~What's new in Python 3.8~~
+* ~~tmux~~
+* ~~click~~
+* ~~PEP8 part 2, black~~
+* PyCharm
 * tqdm, spinner
 * Ansible 2.9
 
