--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -19,6 +19,14 @@ category:
 * Перечитать и обновить задания
 * Добавить задание explore network map в 19 раздел (19.4)
 * Добавить задание textfsm states
+* Обновить VM:
+
+ * Python 3.8
+ * Mu alpha
+ * install yaml
+ * Update GNS3
+ * pth с каталогом к репозиторие курса + common functions?
+ * clone course repo
 
 ### PyNEng-8
 
