--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -19,6 +19,8 @@ category:
 * Перечитать и обновить задания
 * Добавить задание explore network map в 19 раздел (19.4)
 * Добавить задание textfsm states
+* Написать новые задания вместо 26.3
+* исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
 * Обновить VM:
 
   * Python 3.8
