--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -17,7 +17,7 @@ category:
 ### PyNEng-9
 
 * Перечитать и обновить задания
-* Добавить задание explore network map в 19 раздел (19.4)
+* Добавить задание explore network map в 19 раздел (19.4). Добавить в топологию линк между r2-r3 для этого задания
 * Добавить задание textfsm states
 * Написать новые задания вместо 26.3
 * исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
@@ -25,6 +25,7 @@ category:
 
   * Python 3.8
   * Mu alpha
+  * обновить netmiko, textfsm
   * install yaml
   * Update GNS3
   * pth с каталогом к репозиторие курса + common functions?
