--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -20,6 +20,7 @@ category:
 * Добавить задание explore network map в 19 раздел (19.4). Добавить в топологию линк между r2-r3 для этого задания
 * Добавить задание textfsm states
 * Написать новые задания вместо 26.3
+* исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
 * Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
 * исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
 * Обновить VM:
