--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -22,6 +22,7 @@ category:
 * Написать новые задания вместо 26.3
 * исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
 * напистаь что надо создать исключение в 27.2a
+* написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
 * Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
 * исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
 * Обновить VM:
