update ansible link

--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -53,6 +53,9 @@ category:
 * Добавить информацию по [SQLite foreign key](https://pyneng.github.io/pyneng-3/db-foreign-key/) в 18 раздел
 * Написать вводное по поводу разделов 1 и 2
 * Написать про цепочку методов
+* Перевести задания на англ
+* Репозиторий с примерами кода pyneng-examples
+* Подборка с репозиториями/кодом для практики чтения кода
 
 ### Бонусные лекции PyNEng
 
