--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -21,6 +21,7 @@ category:
 * Добавить задание textfsm states
 * Написать новые задания вместо 26.3
 * исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
+* тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.
 * напистаь что надо создать исключение в 27.2a
 * написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
 * Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
