Добавила задания в репозиторий

--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -21,6 +21,8 @@ category:
 * Добавить задание textfsm states
 * Написать новые задания вместо 26.3
 * исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
+* заменить in на == в тесте 21.5, тогда будет видно diff
+* 25.2b проверять тестом отправку одной команды
 * тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.
 * напистаь что надо создать исключение в 27.2a
 * написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
