--- a/_posts/2020-03-23-python-38.md
+++ b/_posts/2020-03-23-python-38.md
@@ -11,10 +11,9 @@ category:
 
 Запись лекции:
 
-* [Часть 1](https://youtu.be/oeWN-vLYFew)
-* [Часть 2](https://youtu.be/gGZF7Srrals)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLah0HUih_ZRlmf6BeA-7Bx-1NvmqnSIOD" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Ссылки:
+## Ссылки:
 
 * [Примеры из лекции](https://github.com/pyneng/pyneng-bonus-lectures/tree/master/examples/02_python38)
 * [Презентация](https://gitpitch.com/natenka/pyneng-slides/bonus-python38#/)
