--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -28,15 +28,10 @@ category:
 * написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
 * Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
 * исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
-* Обновить VM:
+* ~~Обновить VM:~~
 
-  * Python 3.8
-  * Mu alpha
-  * обновить netmiko, textfsm
-  * install yaml
-  * Update GNS3
-  * pth с каталогом к репозиторие курса + common functions?
-  * clone course repo
+  * ~~Python 3.8~~
+  * ~~обновить/установить pip, jinja2, textfsm, ipython, netmiko, click, tabulate, graphviz, pyyaml, paramiko, pexpect, litecli, mu-editor~~
 
 ### PyNEng-8
 
