--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -20,11 +20,12 @@ category:
 * Добавить задание explore network map в 19 раздел (19.4). Добавить в топологию линк между r2-r3 для этого задания
 * Добавить задание textfsm states
 * Написать новые задания вместо 26.3
-* исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
 * заменить in на == в тесте 21.5, тогда будет видно diff
+* 22.1a, 22.4 проверять функцию тестами на другой команде
+* исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
 * 25.2b проверять тестом отправку одной команды
 * тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.
-* напистаь что надо создать исключение в 27.2a
+* напистаь что надо создать исключение в 27.2a и тестировать другие ошибки
 * написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
 * Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
 * исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
