--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -46,9 +46,19 @@ category:
 3. Добавить задания
 4. Обновить на Python 3.8
 
+### Ansible для сетевых инженеров
+
+* ~~Перенести книгу на readthedocs~~
+* ~~Обновить 1-3 разделы на Ansible 2.9~~
+* Обновить раздел "7. Playbook" на Ansible 2.9
+* Дописать раздел "4. Модули ресурсов"
+* Написать раздел "5. Сетевые модули не привязанные к конкретной ОС"
+* Написать раздел "6. Получение структурированного вывода"
+
+
 ### PyNEng книга/курс
 
-* Обновить раздел по Ansible до последней версии.
+* ~~Обновить раздел по Ansible до последней версии.~~
 * Добавить информацию по [SQLite foreign key](https://pyneng.github.io/pyneng-3/db-foreign-key/) в 18 раздел
 * Написать вводное по поводу разделов 1 и 2
 * Написать про цепочку методов
@@ -61,10 +71,10 @@ category:
 * ~~What's new in Python 3.8~~
 * ~~tmux~~
 * ~~click~~
-* ~~PEP8 part 2, black~~
+* ~~black~~
+* ~~Ansible 2.9~~
 * PyCharm
 * tqdm, spinner
-* Ansible 2.9
 
 ## Языки
 
