--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -16,23 +16,49 @@ category:
 
 ### PyNEng-9
 
-* Перечитать и обновить задания
-* Добавить задание explore network map в 19 раздел (19.4). Добавить в топологию линк между r2-r3 для этого задания
-* Добавить задание textfsm states
-* Написать новые задания вместо 26.3
-* заменить in на == в тесте 21.5, тогда будет видно diff
+15:
+
+* добавить новое задание по обработке конфига
+
+21:
+
+* ~~заменить in на == в тесте 21.5, тогда будет видно diff~~
+
+22:
+
 * 22.1a, 22.4 проверять функцию тестами на другой команде
+* Добавить задание textfsm states
+* исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
 * исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
+
+25:
+
 * 25.2b проверять тестом отправку одной команды
-* тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.
-* напистаь что надо создать исключение в 27.2a и тестировать другие ошибки
 * написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
 * Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
-* исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
-* ~~Обновить VM:~~
 
-  * ~~Python 3.8~~
-  * ~~обновить/установить pip, jinja2, textfsm, ipython, netmiko, click, tabulate, graphviz, pyyaml, paramiko, pexpect, litecli, mu-editor~~
+26:
+
+* Написать новые задания вместо 26.3
+
+27:
+
+* тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.
+* напистаь что надо создать исключение в 27.2a и тестировать другие ошибки
+
+
+~~Обновить VM:~~
+
+* ~~Python 3.8~~
+* ~~обновить/установить pip, jinja2, textfsm, ipython, netmiko, click, tabulate, graphviz, pyyaml, paramiko, pexpect, litecli, mu-editor~~
+
+
+Тесты:
+
+* pip install pytest-clarity
+* pytest.ini with options
+* не использовать in
+* изменить return_value на task_result, correct_return_value на correct_result
 
 ### PyNEng-8
 
@@ -45,6 +71,9 @@ category:
 2. Перейти на PyCharm для этого курса
 3. Добавить задания
 4. Обновить на Python 3.8
+
+
+* Добавить задание explore network map. Добавить в топологию линк между r2-r3 для этого задания
 
 ### Ansible для сетевых инженеров
 
