--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -16,6 +16,9 @@ category:
 
 ### PyNEng-9
 
+* ~~Перечитать и обновить задания~~
+* Проверить все тесты
+
 15:
 
 * добавить новое задание по обработке конфига
