--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -20,6 +20,7 @@ category:
 * Проверить все тесты
 * возможно стоит везде сделать pytest.ini только с опцией addopts = --no-hints.
   Тогда  можно будет только добавлять -vv и будет срабатывать pytest-clarity
+* Проверить, что везде netmiko host, а не ip
 
 
 15:
