--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -18,6 +18,7 @@ category:
 
 * ~~Перечитать и обновить задания~~
 * Проверить все тесты
+* black
 * возможно стоит везде сделать pytest.ini только с опцией addopts = --no-hints.
   Тогда  можно будет только добавлять -vv и будет срабатывать pytest-clarity
 * Проверить, что везде netmiko host, а не ip
