--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -34,10 +34,10 @@ category:
 
 22:
 
-* 22.1a, 22.4 проверять функцию тестами на другой команде
+* ~~22.1a, 22.4 проверять функцию тестами на другой команде~~
 * Добавить задание textfsm states
-* исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)
-* исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент
+* ~~исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)~~
+* ~~исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент~~
 
 25:
 
