--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -41,9 +41,9 @@ category:
 
 25:
 
-* 25.2b проверять тестом отправку одной команды
-* написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b
-* Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b
+* ~~25.2b проверять тестом отправку одной команды~~
+* ~~написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b~~
+* ~~Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b~~
 
 26:
 
