--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -47,8 +47,8 @@ category:
 
 27:
 
-* тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.
-* напистаь что надо создать исключение в 27.2a и тестировать другие ошибки
+* ~~тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.~~
+* ~~написать что надо создать исключение в 27.2a и тестировать другие ошибки~~
 
 
 ~~Обновить VM:~~
