--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -16,10 +16,11 @@ category:
 
 ### PyNEng-9
 
-* ~~Перечитать и обновить задания~~
+* ~~Перечитать и обновить все задания~~
+* ~~Перечитать и обновить все тесты~~
 * Проверить все тесты
 * black
-* возможно стоит везде сделать pytest.ini только с опцией addopts = --no-hints.
+* сделать pytest.ini только с опцией addopts = --no-hints.
   Тогда  можно будет только добавлять -vv и будет срабатывать pytest-clarity
 * Проверить, что везде netmiko host, а не ip
 
@@ -27,28 +28,6 @@ category:
 15:
 
 * добавить новое задание по обработке конфига
-
-21:
-
-* ~~заменить in на == в тесте 21.5, тогда будет видно diff~~
-
-22:
-
-* ~~22.1a, 22.4 проверять функцию тестами на другой команде~~
-* Добавить задание textfsm states
-* ~~исправить шаблоны textfsm sh ip route ospf (нет маски в выводе) и sh clock (не хватат * в начале)~~
-* ~~исправить тест 22.4, чтобы путь к шаблонам передавался как ключевой аргумент~~
-
-25:
-
-* ~~25.2b проверять тестом отправку одной команды~~
-* ~~написать что в 25.2c надо проверять 3 ошибки, не одну, проверять в тесте все три как в 19.2b~~
-* ~~Исправить задание 25.2c, там должна быть команда `a`, как в 19.2b~~
-
-27:
-
-* ~~тест не совсем полный для задания 27.2а. Он не проверяет наличие _check_error_in_command.~~
-* ~~написать что надо создать исключение в 27.2a и тестировать другие ошибки~~
 
 
 ~~Обновить VM:~~
