--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -18,11 +18,10 @@ category:
 
 * ~~Перечитать и обновить все задания~~
 * ~~Перечитать и обновить все тесты~~
-* Проверить все тесты
-* black
-* сделать pytest.ini только с опцией addopts = --no-hints.
-  Тогда  можно будет только добавлять -vv и будет срабатывать pytest-clarity
-* Проверить, что везде netmiko host, а не ip
+* ~~Проверить все тесты~~
+* ~~black~~
+* ~~сделать pytest.ini только с опцией addopts = --no-hints. Тогда можно будет только добавлять -vv и будет срабатывать pytest-clarity~~
+* ~~Проверить, что везде netmiko host, а не ip~~
 
 
 15:
@@ -40,8 +39,7 @@ category:
 
 * pip install pytest-clarity
 * pytest.ini with options
-* не использовать in
-* изменить return_value на task_result, correct_return_value на correct_result
+* не использовать in - ок с clarity
 
 ### PyNEng-8
 
