--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -23,23 +23,20 @@ category:
 * ~~сделать pytest.ini только с опцией addopts = --no-hints. Тогда можно будет только добавлять -vv и будет срабатывать pytest-clarity~~
 * ~~Проверить, что везде netmiko host, а не ip~~
 
+### PyNEng-10
 
 15:
 
 * добавить новое задание по обработке конфига
 
+21:
 
-~~Обновить VM:~~
-
-* ~~Python 3.8~~
-* ~~обновить/установить pip, jinja2, textfsm, ipython, netmiko, click, tabulate, graphviz, pyyaml, paramiko, pexpect, litecli, mu-editor~~
-
+* удалить файлы с данными ospf2, ospf3
 
 Тесты:
 
 * pip install pytest-clarity
 * pytest.ini with options
-* не использовать in - ок с clarity
 
 ### PyNEng-8
 
@@ -68,6 +65,7 @@ category:
 
 ### PyNEng книга/курс
 
+* перенести обновленные задания/тесты в репозиторий
 * ~~Обновить раздел по Ansible до последней версии.~~
 * Добавить информацию по [SQLite foreign key](https://pyneng.github.io/pyneng-3/db-foreign-key/) в 18 раздел
 * Написать вводное по поводу разделов 1 и 2
