--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -38,18 +38,20 @@ category:
 * pip install pytest-clarity
 * pytest.ini with options
 
-### PyNEng-8
+### PyNEng-10
 
-* ~~Перечитать и обновить задания~~
-* ~~Добавить задание csv~~
+* Перечитать и обновить задания
+
+
+Исправить задания/тесты:
+
+* тест 12.2 сравнивать отсортированные списки адресов
 
 ### Новый курс "Advanced PyNEng"
 
 1. Написать книгу
-2. Перейти на PyCharm для этого курса
-3. Добавить задания
-4. Обновить на Python 3.8
-
+2. Добавить задания
+3. Обновить на Python 3.8
 
 * Добавить задание explore network map. Добавить в топологию линк между r2-r3 для этого задания
 
