--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -46,6 +46,7 @@ category:
 Исправить задания/тесты:
 
 * тест 12.2 сравнивать отсортированные списки адресов
+* тест 15.2a проверять на другом выводе, чтобы не было привязки к количеству столбцов
 
 ### Новый курс "Advanced PyNEng"
 
