--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -29,6 +29,11 @@ category:
 
 * добавить новое задание по обработке конфига
 
+17:
+
+* 17.3 тестом проверять разные файлы:  sw1 и r1
+* 17.3b написать явно где взять функцию draw_topology
+
 21:
 
 * удалить файлы с данными ospf2, ospf3
