--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -33,6 +33,7 @@ category:
 
 * 17.3 тестом проверять разные файлы:  sw1 и r1
 * 17.3b написать явно где взять функцию draw_topology
+* 17.4 написать что в итоговый csv надо добавлять заголовки `["Name", "Email", "Last Changed"]`
 
 21:
 
