--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -25,15 +25,28 @@ category:
 
 ### PyNEng-10
 
+* Перечитать и обновить задания
+
+Исправить задания/тесты:
+
+12:
+
+* тест 12.2 сравнивать отсортированные списки адресов
+
 15:
 
 * добавить новое задание по обработке конфига
+* тест 15.2a проверять на другом выводе, чтобы не было привязки к количеству столбцов
 
 17:
 
 * 17.3 тестом проверять разные файлы:  sw1 и r1
 * 17.3b написать явно где взять функцию draw_topology
 * 17.4 написать что в итоговый csv надо добавлять заголовки `["Name", "Email", "Last Changed"]`
+
+19:
+
+* 19.2c тест очень плохо показывает что не так, когда не хватало комманд в error dict
 
 21:
 
@@ -43,16 +56,6 @@ category:
 
 * pip install pytest-clarity
 * pytest.ini with options
-
-### PyNEng-10
-
-* Перечитать и обновить задания
-
-
-Исправить задания/тесты:
-
-* тест 12.2 сравнивать отсортированные списки адресов
-* тест 15.2a проверять на другом выводе, чтобы не было привязки к количеству столбцов
 
 ### Новый курс "Advanced PyNEng"
 
