--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -47,6 +47,7 @@ category:
 19:
 
 * 19.2c тест очень плохо показывает что не так, когда не хватало комманд в error dict
+* 19.3 создать словарь r1
 
 21:
 
