--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -29,6 +29,10 @@ category:
 
 Исправить задания/тесты:
 
+11:
+
+* 11.2 написать, что если функция 11.1 не заработала с какими-то файлами, надо переделать 11.1, а не копировать код
+
 12:
 
 * тест 12.2 сравнивать отсортированные списки адресов
