--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -53,6 +53,10 @@ category:
 * 19.2c тест очень плохо показывает что не так, когда не хватало комманд в error dict
 * 19.3 создать словарь r1, задание подвести к keywords only args
 
+20: 
+
+* 20.2 указать явно, что файл должен быть текстовый txt
+
 21:
 
 * удалить файлы с данными ospf2, ospf3
