--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -29,6 +29,10 @@ category:
 
 Исправить задания/тесты:
 
+6:
+
+* 6.2 исправить описание 3 пункт убрать, чтобы было более понятно что за тип адреса
+
 11:
 
 * 11.2 написать, что если функция 11.1 не заработала с какими-то файлами, надо переделать 11.1, а не копировать код
@@ -60,6 +64,7 @@ category:
 21:
 
 * удалить файлы с данными ospf2, ospf3
+* 21.2 подумать о том чтобы шаблоны заранее приготовить?
 
 Тесты:
 
