--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -66,6 +66,10 @@ category:
 * удалить файлы с данными ospf2, ospf3
 * 21.2 подумать о том чтобы шаблоны заранее приготовить?
 
+22:
+
+* 22.1 уточнить форматирровку что содержимое файла надо передать, добавить подключение к оборудованию и передачу вывода команды с оборудования
+
 Тесты:
 
 * pip install pytest-clarity
