--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -65,6 +65,7 @@ category:
 
 * удалить файлы с данными ospf2, ospf3
 * 21.2 подумать о том чтобы шаблоны заранее приготовить?
+* 21.3 написать какой конфиг должен в итоге получиться
 
 22:
 
