--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -71,6 +71,10 @@ category:
 
 * 22.1 уточнить форматирровку что содержимое файла надо передать, добавить подключение к оборудованию и передачу вывода команды с оборудования
 
+26:
+
+* 26.3a тестировать что возвращается на каждой итерации
+
 Тесты:
 
 * pip install pytest-clarity
