--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -73,6 +73,11 @@ category:
 
 * 22.1 уточнить форматирровку что содержимое файла надо передать, добавить подключение к оборудованию и передачу вывода команды с оборудования
 
+25:
+
+* 25.1x не проверяют что self.topology словарь
+* 25.2 написать явно, что параметры init указаны в примере вызова
+
 26:
 
 * 26.3a тестировать что возвращается на каждой итерации
