--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -77,6 +77,8 @@ category:
 
 * 25.1x не проверяют что self.topology словарь
 * 25.2 написать явно, что параметры init указаны в примере вызова
+* заменить в тестах команды с таймерами/датой/временем
+
 
 26:
 
@@ -84,6 +86,7 @@ category:
 
 Тесты:
 
+* добавить в pytest параметр запуска тестов с fast_cli
 * pip install pytest-clarity
 * pytest.ini with options
 
