--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -78,7 +78,7 @@ category:
 * 25.1x не проверяют что self.topology словарь
 * 25.2 написать явно, что параметры init указаны в примере вызова
 * заменить в тестах команды с таймерами/датой/временем
-
+* 25.2a написано ДВА параметра, но позже добавила третий
 
 26:
 
