--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -84,6 +84,10 @@ category:
 
 * 26.3a тестировать что возвращается на каждой итерации
 
+27:
+
+* 27.1a исправить ip на host в словаре
+
 Тесты:
 
 * добавить в pytest параметр запуска тестов с fast_cli
