--- a/_posts/2020-08-26-quiz.md
+++ b/_posts/2020-08-26-quiz.md
@@ -9,7 +9,7 @@ category:
 
 Просьба ко всем, кто занимается автоматизацией сетевого оборудования, [заполнить небольшой опрос](https://docs.google.com/forms/d/e/1FAIpQLSe50ZsRp6tMWuKju01XviUYUedrg4bTE5ehrdQwlRGTqOKDOA/viewform?usp=sf_link). Особенно большая просьба заполнить опрос к девушкам. Если вы знаете девушек в сетевой сфере, которые изучают Python, отправьте, пожалуйста, им опрос. 
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe50ZsRp6tMWuKju01XviUYUedrg4bTE5ehrdQwlRGTqOKDOA/viewform?embedded=true" width="640" height="2429" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe50ZsRp6tMWuKju01XviUYUedrg4bTE5ehrdQwlRGTqOKDOA/viewform?embedded=true" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>""""""""""""
 
 В качестве мотивации для заполнения опроса проведу розыгрыш 3 книг. Победителям отправлю за свой
 счет печатную версию книги на выбор: [Practices of the Python Pro](https://www.amazon.com/gp/product/1617296082/) или [Effective Python: 90 Specific Ways to Write Better Python](https://www.amazon.com/gp/product/0134853989/).
