--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -31,20 +31,20 @@ category:
 
 6:
 
-* 6.2 исправить описание 3 пункт убрать, чтобы было более понятно что за тип адреса
+* ~~6.2 исправить описание 3 пункт убрать, чтобы было более понятно что за тип адреса~~
 
 11:
 
-* 11.2 написать, что если функция 11.1 не заработала с какими-то файлами, надо переделать 11.1, а не копировать код
+* ~~11.2 написать, что если функция 11.1 не заработала с какими-то файлами, надо переделать 11.1, а не копировать код~~
 
 12:
 
-* тест 12.2 сравнивать отсортированные списки адресов
+* ~~тест 12.2 сравнивать отсортированные списки адресов~~
 
 15:
 
 * добавить новое задание по обработке конфига
-* тест 15.2a проверять на другом выводе, чтобы не было привязки к количеству столбцов
+* ~~тест 15.2a проверять на другом выводе, чтобы не было привязки к количеству столбцов~~
 
 17:
 
