--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -48,9 +48,9 @@ category:
 
 17:
 
-* 17.3 тестом проверять разные файлы:  sw1 и r1
-* 17.3b написать явно где взять функцию draw_topology
-* 17.4 написать что в итоговый csv надо добавлять заголовки `["Name", "Email", "Last Changed"]`. И сделать обратную функцию для convert_datetimestr_to_datetime - convert_datetime_to_str
+* ~~17.3 тестом проверять разные файлы:  sw1 и r1~~
+* ~~17.3b написать явно где взять функцию draw_topology~~
+* ~~17.4 написать что в итоговый csv надо добавлять заголовки `["Name", "Email", "Last Changed"]`. И сделать обратную функцию для convert_datetimestr_to_datetime - convert_datetime_to_str~~
 
 19:
 
