--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -60,6 +60,7 @@ category:
 20: 
 
 * 20.2 указать явно, что файл должен быть текстовый txt
+* 20.3 в словаре с командами жестко прибиты айпишники, причем и в основном файле, и в тестах
 
 21:
 
