--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -54,13 +54,12 @@ category:
 
 19:
 
-* 19.2c тест очень плохо показывает что не так, когда не хватало комманд в error dict
-* 19.3 создать словарь r1, задание подвести к keywords only args
+* ~~19.2c тест очень плохо показывает что не так, когда не хватало комманд в error dict~~
 
 20: 
 
-* 20.2 указать явно, что файл должен быть текстовый txt
-* 20.3 в словаре с командами жестко прибиты айпишники, причем и в основном файле, и в тестах
+* ~~20.2 указать явно, что файл должен быть текстовый txt~~
+* ~~20.3 в словаре с командами жестко прибиты айпишники, причем и в основном файле, и в тестах~~
 
 21:
 
@@ -79,7 +78,7 @@ category:
 * 25.1x не проверяют что self.topology словарь
 * 25.2 написать явно, что параметры init указаны в примере вызова
 * заменить в тестах команды с таймерами/датой/временем
-* 25.2a написано ДВА параметра, но позже добавила третий
+* 25.2a написано ДВА параметра, но позже добавила третий. И команда exclude unassigned путает
 
 26:
 
