--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -90,7 +90,7 @@ category:
 
 Тесты:
 
-* добавить в pytest параметр запуска тестов с fast_cli
+* Перенести параметр fast_cli из тестов в devices.yaml
 * pip install pytest-clarity
 * pytest.ini with options
 
