--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -63,11 +63,11 @@ category:
 
 21:
 
-* удалить файлы с данными ospf2, ospf3
-* 21.2 подумать о том чтобы шаблоны заранее приготовить?
-* 21.3 написать какой конфиг должен в итоге получиться
-* 21.4 сильно специфическая проверка для настройки интерфейсов, между ними нельзя поставить !
-* 21.5a непонятно что за словари с параметрами и что за send_config_set
+* ~~удалить файлы с данными ospf2, ospf3~~
+* ~~21.2 подумать о том чтобы шаблоны заранее приготовить?~~
+* ~~21.3 написать какой конфиг должен в итоге получиться~~
+* ~~21.4 сильно специфическая проверка для настройки интерфейсов, между ними нельзя поставить !~~
+* ~~21.5a непонятно что за словари с параметрами и что за send_config_set~~
 
 22:
 
