--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -71,11 +71,11 @@ category:
 
 22:
 
-* 22.1 уточнить форматирровку что содержимое файла надо передать, добавить подключение к оборудованию и передачу вывода команды с оборудования
+* ~~22.1 уточнить форматирровку что содержимое файла надо передать, добавить подключение к оборудованию и передачу вывода команды с оборудования~~
 
 25:
 
-* 25.1x не проверяют что self.topology словарь
+* ~~25.1x не проверяют что self.topology словарь~~
 * 25.2 написать явно, что параметры init указаны в примере вызова
 * заменить в тестах команды с таймерами/датой/временем
 * 25.2a написано ДВА параметра, но позже добавила третий. И команда exclude unassigned путает
