--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -76,9 +76,9 @@ category:
 25:
 
 * ~~25.1x не проверяют что self.topology словарь~~
-* 25.2 написать явно, что параметры init указаны в примере вызова
-* заменить в тестах команды с таймерами/датой/временем
-* 25.2a написано ДВА параметра, но позже добавила третий. И команда exclude unassigned путает
+* ~~25.2 написать явно, что параметры init указаны в примере вызова~~
+* ~~заменить в тестах команды с таймерами/датой/временем~~
+* ~~25.2a написано ДВА параметра, но позже добавила третий. И команда exclude unassigned путает~~
 
 26:
 
