--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -82,11 +82,11 @@ category:
 
 26:
 
-* 26.3a тестировать что возвращается на каждой итерации
+* ~~26.3a тестировать что возвращается на каждой итерации~~
 
 27:
 
-* 27.1a исправить ip на host в словаре
+* ~~27.1a исправить ip на host в словаре~~
 
 Тесты:
 
