--- a/_posts/2020-10-06-patreon.md
+++ b/_posts/2020-10-06-patreon.md
@@ -28,3 +28,6 @@ category:
 что минус для меня, так как цель этих пробных лекций - проработать материал.
 Если с Patreon всё получится, как я задумала, я хочу перенести эти лекции на Patreon. И добавить позже отдельный уровень, для тех, кто хочет участвовать в лекциях и задавать вопросы.
 
+## Как работает Patreon
+
+Patreon работает в режиме подписки: вы поддерживаете автора/проект раз в месяц небольшой суммой.
