--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -102,7 +102,8 @@ category:
 
 * Добавить задание explore network map. Добавить в топологию линк между r2-r3 для этого задания
 
-test 7.2a добавить проверку второго вызова (изменяется первый)
+* test 7.2a добавить проверку второго вызова (изменяется первый)
+* тест 8.6 не проверяет правильно le gt (равные значения)
 
 ### Ansible для сетевых инженеров
 
