--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -96,6 +96,10 @@ category:
 
 ### Новый курс "Advanced PyNEng"
 
+* 12.3a написать явно что обратный линк не только для удаления, но и для getitem
+
+
+
 1. Написать книгу
 2. Добавить задания
 3. Обновить на Python 3.8
