--- a/_pages/todo-2020.md
+++ b/_pages/todo-2020.md
@@ -98,6 +98,7 @@ category:
 
 * 12.3a написать явно что обратный линк не только для удаления, но и для getitem
 
+* 18.1 переделать чтобы функция подключалась к нескольким устройствам, тогда будет проще с Executor в функции
 
 
 1. Написать книгу
