--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -14,21 +14,24 @@ category:
 
 ## PyNEng
 
-### PyNEng-10
+### PyNEng-11
 
-* Перечитать и обновить задания
-* Новая утилита ptest
+ptest:
 
+* добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них
 
-* pip install pytest-clarity
-* pytest.ini with options
-* github cli
 
 ### Advanced PyNEng 2-3
 
+* 3.2 импорт ``from __future__ import annotations`` перенести наверх
+* 9.1 написать явно что все переменные экземпляра, не класса, хотя allocated в классе тоже имеет смысл
+* 9.1 10.1 allocate проверять входит ли адрес в сеть
+* в 3 разделе и 17 случайно выложены ответы на задания
 * 12.3a написать явно что обратный линк не только для удаления, но и для getitem
 
 * 18.1 переделать чтобы функция подключалась к нескольким устройствам, тогда будет проще с Executor в функции
+* 17.4 - задание необязательное, а 18.1 - обязательное
+* убрать параметр fast_cli из файла devices.yaml в 17 разделе
 
 
 1. Написать книгу
