--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -19,6 +19,8 @@ category:
 ptest:
 
 * добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них
+* имя pcheck, pyneng
+* определять имя репозитория для github API через git remote, а не каталог
 
 
 ### Advanced PyNEng 2-3
