--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -21,6 +21,7 @@ ptest:
 * добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них
 * имя pcheck, pyneng
 * определять имя репозитория для github API через git remote, а не каталог
+* добавить six в зависимости
 
 
 ### Advanced PyNEng 2-3
