--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -16,6 +16,16 @@ category:
 
 ### PyNEng-11
 
+Задания 
+
+* 6.2b написать явно что надо выводить сообщение 'Неправильный IP-адрес'
+* 6.3 добавить еще один ключ значение в словарь данных trunk, добавить вланы в список, чтобы было > 5
+* 7.2 тест не проверяет что файл передан как аргумент argv, технически проверяет, но только на одном файле.
+  Чтобы полноценно проверить, надо передавать другой файл для теста, а на этом этапе это может запутать
+* 7.3b убрать фиксированный порядок вывода строк для 10 влана
+* 5.2a разные маски в тесте
+
+
 ptest:
 
 * добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них
