--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -26,6 +26,8 @@ category:
 * 7.3b убрать фиксированный порядок вывода строк для 10 влана
 * 5.2a разные маски в тесте
 * 9.2a добавить пример словаря который должен получиться
+* 15.1a может быть первый адрес. может быть второй
+* удалить 15.2a
 
 
 ptest:
