code examples added

--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -28,6 +28,7 @@ category:
 * 9.2a добавить пример словаря который должен получиться
 * 15.1a может быть первый адрес. может быть второй
 * удалить 15.2a
+* 11.2a проверять функцию на разных типах данных
 
 
 ptest:
