--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -29,7 +29,16 @@ category:
 * 15.1a может быть первый адрес. может быть второй
 * удалить 15.2a
 * 11.2a проверять функцию на разных типах данных
+* 15.4 добавить пример списка
 
+
+В тесте 18.2a добавить зачистку `\r\n` при проверке результатов, как в тесте 18.2
+
+```
+    assert (
+        return_value == correct_return_value
+    ), "Функция возвращает неправильное значение"
+```
 
 ptest:
 
