--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -30,6 +30,7 @@ category:
 * удалить 15.2a
 * 11.2a проверять функцию на разных типах данных
 * 15.4 добавить пример списка
+* 18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без
 
 
 В тесте 18.2a добавить зачистку `\r\n` при проверке результатов, как в тесте 18.2
