--- a/_posts/2021-04-05-scrapli.md
+++ b/_posts/2021-04-05-scrapli.md
@@ -25,7 +25,8 @@ category:
 * [синхронный ("обычный") вариант](https://github.com/natenka/pyneng-examples/tree/main/ssh_telnet/scrapli)
 * [асинхронный вариант](https://github.com/natenka/pyneng-examples/tree/main/asyncio/asyncio02_libs/scrapli)
 
-В примерах показаны как базовые варианты подключения, так и параллельное подключение с потоками и asyncio.
+В примерах показаны как базовые варианты подключения, так и параллельное
+подключение с потоками и asyncio. Примеры я еще буду добавлять.
 
 > Чем еще может быть интересен scrapli в асинхронном контексте - это единственный
 > нормальный асинхронный telnet клиент, который я знаю. Остальные или старые
