--- a/_posts/2021-04-05-scrapli.md
+++ b/_posts/2021-04-05-scrapli.md
@@ -15,6 +15,8 @@ category:
 Основы работы с модулем добавлены в книгу [Python для сетевых инженеров](https://pyneng.readthedocs.io/ru/latest/book/18_ssh_telnet/scrapli.html),
 а асинхронная часть написана в книге [Advanced Python для сетевых инженеров](https://advpyneng.readthedocs.io/ru/latest/book/17_async_libraries/scrapli.html).
 
+> [Синхронный вариант также добавлен в английскую версию книги](https://pyneng.readthedocs.io/en/latest/book/18_ssh_telnet/scrapli.html)
+
 Начинать надо с базовой книги, 
 так как там расписаны основы, методы и так далее, а в advanced только коротко отличия
 и примеры кода.
