--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -32,6 +32,9 @@ category:
 * 15.4 добавить пример списка
 * 18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без
 * 17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию
+* 21.4  остался sh version в тестах, заменить на статическую команду
+* 23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении
+
 
 
 В тесте 18.2a добавить зачистку `\r\n` при проверке результатов, как в тесте 18.2
