--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -34,6 +34,7 @@ category:
 * 17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию
 * 21.4  остался sh version в тестах, заменить на статическую команду
 * 23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении
+* Шаблон надо создавать вручную, скопировав части конфига в соответствующий шаблон. (нет никакого конфига, убрать фразу про копирование)
 
 
 
