--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -35,6 +35,7 @@ category:
 * 21.4  остался sh version в тестах, заменить на статическую команду
 * 23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении
 * Шаблон надо создавать вручную, скопировав части конфига в соответствующий шаблон. (нет никакого конфига, убрать фразу про копирование)
+* 19.3a порядок команд может быть любым убрать или тест исправить
 
 
 
