--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -18,20 +18,22 @@ category:
 
 Задания 
 
+* 5.2a разные маски в тесте
 * ~~6.2b написать явно что надо выводить сообщение 'Неправильный IP-адрес'~~
 * ~~6.3 добавить еще один ключ значение в словарь данных trunk, добавить вланы в список, чтобы было > 5~~
 * ~~6.3 убрать пробел после FastEthernet в тестах~~
 * 7.2 тест не проверяет что файл передан как аргумент argv, технически проверяет, но только на одном файле.
   Чтобы полноценно проверить, надо передавать другой файл для теста, а на этом этапе это может запутать
+* В задании 7.3a сортировка нужна "стандартная"
 * 7.3b убрать фиксированный порядок вывода строк для 10 влана
-* 5.2a разные маски в тесте
 * 9.2a добавить пример словаря который должен получиться
 * 15.1a может быть первый адрес. может быть второй
 * удалить 15.2a
 * 11.2a проверять функцию на разных типах данных
 * 15.4 добавить пример списка
+* 17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию.
+* Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.
 * 18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без
-* 17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию
 * 21.4  остался sh version в тестах, заменить на статическую команду
 * 23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении
 * Шаблон надо создавать вручную, скопировав части конфига в соответствующий шаблон. (нет никакого конфига, убрать фразу про копирование)
