--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -18,7 +18,7 @@ category:
 
 Задания 
 
-* 5.2a разные маски в тесте
+* ~~5.2a разные маски в тесте~~
 * ~~6.2b написать явно что надо выводить сообщение 'Неправильный IP-адрес'~~
 * ~~6.3 добавить еще один ключ значение в словарь данных trunk, добавить вланы в список, чтобы было > 5~~
 * ~~6.3 убрать пробел после FastEthernet в тестах~~
