--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -22,10 +22,10 @@ category:
 * ~~6.2b написать явно что надо выводить сообщение 'Неправильный IP-адрес'~~
 * ~~6.3 добавить еще один ключ значение в словарь данных trunk, добавить вланы в список, чтобы было > 5~~
 * ~~6.3 убрать пробел после FastEthernet в тестах~~
-* 7.2 тест не проверяет что файл передан как аргумент argv, технически проверяет, но только на одном файле.
-  Чтобы полноценно проверить, надо передавать другой файл для теста, а на этом этапе это может запутать
-* В задании 7.3a сортировка нужна "стандартная"
-* 7.3b убрать фиксированный порядок вывода строк для 10 влана
+* ~~7.2 тест не проверяет что файл передан как аргумент argv, технически проверяет, но только на одном файле.
+  Чтобы полноценно проверить, надо передавать другой файл для теста, а на этом этапе это может запутать~~
+* ~~В задании 7.3a сортировка нужна "стандартная"~~
+* ~~7.3b убрать фиксированный порядок вывода строк для 10 влана~~
 * 9.2a добавить пример словаря который должен получиться
 * 15.1a может быть первый адрес. может быть второй
 * удалить 15.2a
