--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -27,7 +27,7 @@ category:
 * ~~В задании 7.3a сортировка нужна "стандартная"~~
 * ~~7.3b убрать фиксированный порядок вывода строк для 10 влана~~
 * ~~9.2a добавить пример словаря который должен получиться~~
-* 11.2a проверять функцию на разных типах данных
+* ~~11.2a проверять функцию на разных данных~~
 * 15.1a может быть первый адрес. может быть второй
 * удалить 15.2a
 * 15.4 добавить пример списка
