--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -28,9 +28,9 @@ category:
 * ~~7.3b убрать фиксированный порядок вывода строк для 10 влана~~
 * ~~9.2a добавить пример словаря который должен получиться~~
 * ~~11.2a проверять функцию на разных данных~~
-* 15.1a может быть первый адрес. может быть второй
-* удалить 15.2a
-* 15.4 добавить пример списка
+* ~~15.1b может быть первый адрес. может быть второй~~
+* ~~удалить 15.2a~~
+* ~~15.4 добавить пример списка~~
 * 17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию.
 * Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.
 * 18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без
