--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -31,7 +31,7 @@ category:
 * ~~15.1b может быть первый адрес. может быть второй~~
 * ~~удалить 15.2a~~
 * ~~15.4 добавить пример списка~~
-* 17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию.
+* ~~17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию.~~
 * Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.
 * 18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без
 * 21.4  остался sh version в тестах, заменить на статическую команду
