--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -32,12 +32,12 @@ category:
 * ~~удалить 15.2a~~
 * ~~15.4 добавить пример списка~~
 * ~~17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию.~~
-* Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.
-* 18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без
+* ~~Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.~~
+* ~~18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без~~
+* 19.3a порядок команд может быть любым убрать или тест исправить
 * 21.4  остался sh version в тестах, заменить на статическую команду
 * 23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении
 * Шаблон надо создавать вручную, скопировав части конфига в соответствующий шаблон. (нет никакого конфига, убрать фразу про копирование)
-* 19.3a порядок команд может быть любым убрать или тест исправить
 
 
 
