--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -35,26 +35,15 @@ category:
 * ~~Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.~~
 * ~~18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без~~
 * ~~19.3a порядок команд может быть любым убрать или тест исправить~~
-* 21.4  остался sh version в тестах, заменить на статическую команду
+* ~~21.4  остался sh version в тестах, заменить на статическую команду~~
 * 23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении
 * Шаблон надо создавать вручную, скопировав части конфига в соответствующий шаблон. (нет никакого конфига, убрать фразу про копирование)
 
+pyneng:
 
-
-В тесте 18.2a добавить зачистку `\r\n` при проверке результатов, как в тесте 18.2
-
-```
-    assert (
-        return_value == correct_return_value
-    ), "Функция возвращает неправильное значение"
-```
-
-ptest:
-
-* добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них
-* имя pcheck, pyneng
-* определять имя репозитория для github API через git remote, а не каталог
-* добавить six в зависимости
+* ~~добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них~~
+* ~~определять имя репозитория для github API через git remote, а не каталог~~
+* ~~добавить six в зависимости~~
 
 
 ### Advanced PyNEng 2-3
