--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -91,9 +91,12 @@ pyneng:
 
 ### Бонусные лекции PyNEng
 
-* What's new in Python 3.9
+* ~~What's new in Python 3.9~~
+* typer
+* rich
 * tqdm, spinner
 * scrapli
+* What's new in Python 3.10
 
 ## Языки
 
