--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -12,41 +12,28 @@ category:
 
 [Планы по чтению](https://natenka.github.io/to-read)
 
+
+## Бонусные лекции
+
+### Бонусные лекции PyNEng
+
+* [~~Новые возможности в Python 3.9~~](https://github.com/pyneng/pyneng-bonus-lectures/tree/master/examples/08_python39)
+* [~~Создание CLI с помощью Typer~~](https://github.com/pyneng/pyneng-bonus-lectures/tree/master/examples/09_typer)
+* [Rich](https://github.com/willmcgugan/rich)
+* [tqdm](https://github.com/tqdm/tqdm), [spinners](https://github.com/manrajgrover/halo)
+* [Scrapli](https://github.com/carlmontanari/scrapli)
+* [What's new in Python 3.10](https://docs.python.org/3.10/whatsnew/3.10.html)
+* [pydantic](https://github.com/samuelcolvin/pydantic)
+
+
+### Бонусные лекции Flask
+
+* REST API with Flask
+* FastAPI
+
 ## PyNEng
 
-### PyNEng-11
-
-Задания 
-
-* ~~5.2a разные маски в тесте~~
-* ~~6.2b написать явно что надо выводить сообщение 'Неправильный IP-адрес'~~
-* ~~6.3 добавить еще один ключ значение в словарь данных trunk, добавить вланы в список, чтобы было > 5~~
-* ~~6.3 убрать пробел после FastEthernet в тестах~~
-* ~~7.2 тест не проверяет что файл передан как аргумент argv, технически проверяет, но только на одном файле.
-  Чтобы полноценно проверить, надо передавать другой файл для теста, а на этом этапе это может запутать~~
-* ~~В задании 7.3a сортировка нужна "стандартная"~~
-* ~~7.3b убрать фиксированный порядок вывода строк для 10 влана~~
-* ~~9.2a добавить пример словаря который должен получиться~~
-* ~~11.2a проверять функцию на разных данных~~
-* ~~15.1b может быть первый адрес. может быть второй~~
-* ~~удалить 15.2a~~
-* ~~15.4 добавить пример списка~~
-* ~~17.3b тест  делает unify до проверки длины - в итоге сам делает правильную топологию.~~
-* ~~Тест 18.2a не подчищает \r\n. Если в задании 18.2a использовать не просто send_config_set, а отдельно выходить заходить в конфиг режим, в вывод попадают \r\n вместо \n и тест не проходит. Надо отправить команды send_config_set без выхода/захода в конфиг режим отдельными методами.~~
-* ~~18.2b добавить в тесте проверку как в 18.2c  с разными комбинациями команд с ошибками  и без~~
-* ~~19.3a порядок команд может быть любым убрать или тест исправить~~
-* ~~21.4  остался sh version в тестах, заменить на статическую команду~~
-* ~~23.1a исправить тест repr, чтобы позволял писать любые кавычки в repr представлении~~
-* ~~Шаблон надо создавать вручную, скопировав части конфига в соответствующий шаблон. (нет никакого конфига, убрать фразу про копирование)~~
-
-pyneng:
-
-* ~~добавить проверку что вызов делается в каталоге заданий, если нет, написать что вызывать надо только в них~~
-* ~~определять имя репозитория для github API через git remote, а не каталог~~
-* ~~добавить six в зависимости~~
-
-
-### Advanced PyNEng 2-3
+### Advanced PyNEng 3
 
 * 3.2 импорт ``from __future__ import annotations`` перенести наверх
 * 9.1 написать явно что все переменные экземпляра, не класса, хотя allocated в классе тоже имеет смысл
@@ -88,15 +75,6 @@ pyneng:
 * Перевести задания на англ
 * Репозиторий с примерами кода pyneng-examples
 * Подборка с репозиториями/кодом для практики чтения кода
-
-### Бонусные лекции PyNEng
-
-* ~~What's new in Python 3.9~~
-* typer
-* rich
-* tqdm, spinner
-* scrapli
-* What's new in Python 3.10
 
 ## Языки
 
