--- a/_pages/todo-2021.md
+++ b/_pages/todo-2021.md
@@ -33,6 +33,11 @@ category:
 
 ## PyNEng
 
+### pyneng-12
+
+* Перенести вторую лекцию на воскресенье сразу после первой. Иначе за первую неделю много путанницы из-за того что работа
+  с github отличается на курсе и в книге
+
 ### Advanced PyNEng 3
 
 * 3.2 импорт ``from __future__ import annotations`` перенести наверх
